# src/app/controllers/index.js
@@ -1,5 +1,7 @@
-const getRoot = require('./root/get');
+const createJobLoadLampiranPut02 = require('./lamp02/createJobLoadLampiranPut02');
+const getJobLoadLampiranPut02 = require('./lamp02/getJobLoadLampiranPut02');
 
 module.exports = {
-  getRoot,
+  createJobLoadLampiranPut02,
+  getJobLoadLampiranPut02,
 };
