# src/app/controllers/lamp02/createJobLoadLampiranPut02.js
@@ -1,0 +1,8 @@
+const { LoadPut02Queue } = require('./Queue');
+
+module.exports = async function getRoot(req, res) {
+  const { npwp } = req.params;
+  const sptId = req.params.spt_id;
+  const job = await LoadPut02Queue.add({}, { jobId: `${npwp}:${sptId}` });
+  return res.xsend({ job });
+};
